# cppdbg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: windows-cppdbg.yaml
cmake/: FindDbgEng.cmake
src/: command_queue.h  engine.cpp  engine.h  event_callbacks.cpp  event_callbacks.h  main.cpp
src/handlers/: breakpoints.cpp  breakpoints.h  inspection.cpp  inspection.h  lifecycle.cpp  lifecycle.h  stepping.cpp  stepping.h
src/util/: hr.h  wstring.cpp  wstring.h
tests/: _dap_client.py  test_advanced_breakpoints.py  test_attach.py  test_breakpoint.py  test_evaluate.py  test_exceptions.py  test_inspection.py  test_pause.py  test_setvariable.py  test_smoke.py  test_stepping.py
tests/fixtures/: hello.cpp  loops.cpp  spin.cpp  throws.cpp
